deckReshufflerUseALinkedList